2011-07-12  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* bin/pocc-util.in: Add check-diff command.
	* bin/pocc-checkout: Implement check-diff command, simplify
	directory naming for archives.

	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg: Update accordingly. Now modules have
	consitent directory naming whatever the mode.

2011-07-12  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* bin/pocc-util.in: Allow upgrade of a specific module.

2011-06-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/local/driver.cfg,
	* config/stable/driver.cfg,
	* config/local/configure.cfg,
	* config/stable/configure.cfg: Update to scoptools-0.2.0.

2011-06-20  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c,
	* driver/pocc/driver-clastops.c,
	* driver/pocc/driver-cloog.c,
	* driver/pocc/driver-pluto.c,
	* driver/pocc/driver-codegen.c: Improve support of option --quiet.

2011-06-20  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/base/configure.cfg,
	* config/devel/configure.cfg: Update to latest ISL and CLooG git
	versions.

2011-06-17  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* src/pocc.c: Fix incorrect scop free call.

2011-06-14  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-clastops.c: Fix a compilation warning.

	* src/options.h,
	* src/options.c: Provide option --ptile by default.

2011-06-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-codegen.c: Bypass Pluto's generated OpenMP
	clause when using PTile.

2011-06-09  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Add missing include.

2011-06-09  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/base/configure.cfg: Fix ISL and CLooG git version id.

2011-06-09  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/local/configure.cfg,
	* config/local/driver.cfg,