@@ -5,7 +5,7 @@
 ## Contact: <louis-noel.pouchet@inria.fr>
 ##
 ## Started on  Tue Apr 14 17:43:47 2009 Louis-Noel Pouchet
-## Last update Tue Jul 12 14:21:07 2011 Louis-Noel Pouchet
+## Last update Tue Jul 12 15:46:18 2011 Louis-Noel Pouchet
 ##
 #
 # pocc-checkout: this file is part of the PoCC project.
@@ -74,13 +74,13 @@ sub checkout_wget
     my $filename = $tmp[$#tmp];
     if ($filename =~ /.tar.gz$|.tgz$/) {
 	system("cd $BDIR_CO/$dir && tar xzf $filename");
-	$filename =~ tr/.tar.gz$//;
-	$filename =~ tr/.tgz$//;
+	$filename =~ s/.tar.gz$//g;
+	$filename =~ s/.tgz$//g;
     }
     else {
 	if ($filename =~ /.zip$/) {
 	    system("cd $BDIR_CO/$dir && unzip $filename");
-	    $filename =~ tr/.zip$//;
+	    $filename =~ s/.zip$//g;
 	}
     }
     system("cd $BDIR_CO/$dir && mv $filename $soft");
@@ -97,13 +97,13 @@ sub checkout_local
     my $filename = $tmp[$#tmp];
     if ($filename =~ /.tar.gz$|.tgz$/) {
 	system("cd $BDIR_CO/$dir && tar xzf $filename");
-	$filename =~ tr/.tar.gz$//;
-	$filename =~ tr/.tgz$//;
+	$filename =~ s/.tar.gz$//g;
+	$filename =~ s/.tgz$//g;
     }
     else {
 	if ($filename =~ /.zip$/) {
 	    system("cd $BDIR_CO/$dir && unzip $filename");
-	    $filename =~ tr/.zip$//;
+	    $filename =~ s/.zip$//g;
 	}
     }
     system("cd $BDIR_CO/$dir && mv $filename $soft");
